2005-03-14  Erik Hjortsberg  <erik@katastrof.nu>

	* Removed obsolete files.

2005-03-14  Eric Sandalll  <eric@sandall.us>
	* configure.ac: Fix ilInit check

2005-03-14  Erik Hjortsberg  <erik@katastrof.nu>

	* removed all dependencies of boost since CEGUI since 0.2.0 doesn't use it anymore

2005-03-09  Erik Hjortsberg  <erik@katastrof.nu>

	* made the sun a bit brighter

2005-03-09  Erik Hjortsberg  <erik@katastrof.nu>

	* return const strings

2005-03-09  Erik Hjortsberg  <erik@katastrof.nu>

	* TerrainPage.cpp: removed debug image output code 
	* TerrainPage.cpp: made MemoryDataStreams pass by pointer instead of reference
	* JesusEdit: show a construction object in the preview instead of just a model (this currently segfaults 
	* removed path to shared dirs
	* added path to splatting materials

2005-03-06  Erik Hjortsberg  <erik@katastrof.nu>

	* Use std::list instead of std::vector to avoid scary, scary bug. Thanks rakshasa and AlRiddoch.
	* Added a preview window for JesusEdit.

2005-03-04  Erik Hjortsberg  <erik@katastrof.nu>

	* compile fix

2005-03-04  Erik Hjortsberg  <erik@katastrof.nu>

	* Added more functionality and bug fixes to JesusEdit.
	* It's now possible to create new buildings. The interface and the classes are a bit rough though. There's also no way to save the blueprints.

2005-03-01  Erik Hjortsberg  <erik@katastrof.nu>

	* silly bug, now fixed

2005-03-01  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ability to use different MousePickers
	* Allow the user to select ModelBlocks. The selected block will be highlighted, and the attach points shown.
	* Added widget for editing Carpenter.

2005-02-27  Erik Hjortsberg  <erik@katastrof.nu>

	* Moved Ember specific stuff of Carpenter into Jesus.
	* Added Adapters to Carpenter. 
	* Added a first prototype house. Need to change the way the floors and walls are attached to allow for rounded corners etc.

2005-02-23  Erik Hjortsberg  <erik@katastrof.nu>

	* Change name of main exec to "ember"